--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
 
   <script>
     // 🔧 CONFIGURA TUS DATOS DE CLOUDINARY
-    const CLOUD_NAME = "TU_CLOUD_NAME";
-    const UPLOAD_PRESET = "TU_UPLOAD_PRESET";
+  const CLOUD_NAME = "dopobu3ke";
+const UPLOAD_PRESET = "boda14";
+
 
     let fotosSeleccionadas = [];
 
