Update album button to a styled link
Replaced 'Ver álbum' button with a styled link to album.html.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
     <button onclick="abrirCamara()">Captura el momento</button>
     <button onclick="abrirGaleria()">Sube tu recuerdo</button>
     <button onclick="subirFotos()">Guarda tu recuerdo</button>
-    <button onclick="mostrarAlbum()">Ver álbum</button>
+    <!-- Botón para abrir el álbum -->
+<a href="album.html" class="btn" style="padding:10px 20px; background:#f28c8c; color:white; text-decoration:none; border-radius:5px;">
+  Ver álbum
+</a>
+
 
     <p id="mensaje"></p>
     <div id="album"></div>
