--- a/index.html
+++ b/index.html
@@ -32,138 +32,4 @@
 
     p {
       color: #333;
-      font-size: 16px;
-      margin: 8px 0;
-    }
-
-    button {
-      width: 100%;
-      padding: 14px;
-      margin-top: 14px;
-      background: #0A1F44;
-      color: #FFFFFF;
-      border: 2px solid #C0C0C0;
-      border-radius: 12px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #132F63;
-    }
-
-    #mensaje {
-      margin-top: 15px;
-      color: #0A1F44;
-      font-weight: bold;
-    }
-
-    input[type="file"] {
-      display: none;
-    }
-
-    #album {
-      margin-top: 25px;
-      display: none;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-      gap: 10px;
-    }
-
-    #album img {
-      width: 100%;
-      border-radius: 10px;
-      border: 2px solid #C0C0C0;
-      cursor: pointer;
-      transition: transform 0.3s;
-    }
-
-    #album img:hover {
-      transform: scale(1.05);
-    }
-
-    .btn-album {
-      background: #f28c8c;
-      color: white;
-      border: none;
-      margin-top: 14px;
-    }
-
-    .btn-album:hover {
-      background: #d15d7a;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div class="box">
-    <h1>✨ RICORDI ETERNI ✨</h1>
-    <p>💍 X & D 💍</p>
-
-    <input type="file" id="cameraInput" accept="image/*" capture="environment" multiple>
-    <input type="file" id="galleryInput" accept="image/*" multiple>
-
-    <button onclick="abrirCamara()">Captura el momento</button>
-    <button onclick="abrirGaleria()">Sube tu recuerdo</button>
-    <button onclick="guardarRecuerdo()">Guarda tu recuerdo</button>
-    <button onclick="mostrarAlbum()" class="btn-album">Ver álbum</button>
-
-    <p id="mensaje"></p>
-    <div id="album"></div>
-  </div>
-
-  <script>
-    let fotosSeleccionadas = [];
-
-    function abrirCamara() {
-      document.getElementById("cameraInput").click();
-    }
-
-    function abrirGaleria() {
-      document.getElementById("galleryInput").click();
-    }
-
-    document.getElementById("cameraInput").addEventListener("change", manejarFotos);
-    document.getElementById("galleryInput").addEventListener("change", manejarFotos);
-
-    function manejarFotos(e) {
-      fotosSeleccionadas = Array.from(e.target.files);
-      document.getElementById("mensaje").innerText =
-        fotosSeleccionadas.length + " foto(s) seleccionada(s)";
-    }
-
-    function guardarRecuerdo() {
-      if (fotosSeleccionadas.length === 0) {
-        document.getElementById("mensaje").innerText = "No seleccionaste fotos";
-        return;
-      }
-
-      const album = document.getElementById("album");
-      fotosSeleccionadas.forEach(foto => {
-        const reader = new FileReader();
-        reader.onload = function(event) {
-          const img = document.createElement("img");
-          img.src = event.target.result;
-          album.appendChild(img);
-        }
-        reader.readAsDataURL(foto);
-      });
-
-      document.getElementById("mensaje").innerText = "✨ Recuerdo guardado en el álbum ✨";
-      fotosSeleccionadas = [];
-    }
-
-    function mostrarAlbum() {
-      const album = document.getElementById("album");
-      if (album.style.display === "grid") {
-        album.style.display = "none";
-      } else {
-        album.style.display = "grid";
-      }
-    }
-  </script>
-
-</body>
-</html>
+      font-si
