--- a/index.html
+++ b/index.html
@@ -8,6 +8,189 @@
   <style>
     body {
       font-family: "Times New Roman", Times, serif;
+      background: #0B3C91;
+      text-align: center;
+      padding: 20px;
+      margin: 0;
+    }
+
+    .box {
+      background: #FFFFFF;
+      padding: 25px;
+      border-radius: 14px;
+      max-width: 420px;
+      margin: 40px auto;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    }
+
+    h1 {
+      color: #0B3C91;
+      margin-bottom: 10px;
+    }
+
+    p {
+      color: #333;
+      font-size: 16px;
+      margin: 8px 0;
+    }
+
+    button {
+      margin-top: 15px;
+      padding: 14px;
+      width: 100%;
+      background: #0B3C91;
+      border: none;
+      color: #FFFFFF;
+      font-size: 16px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    #mensaje {
+      margin-top: 15px;
+      color: #0B3C91;
+    }
+
+    #album {
+      margin-top: 20px;
+      display: none;
+    }
+
+    #album img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+
+    input[type="file"] {
+      display: none;
+    }
+  </style>
+</head>
+
+<body>
+
+<div class="box">
+  <h1>✨ RICORDI ETERNI ✨</h1>
+  <p>💍 X & D 💍</p>
+  <p><strong>Máximo 10 fotos por invitado</strong></p>
+
+  <!-- Cámara -->
+  <input type="file" id="cameraInput" accept="image/*" capture="environment" multiple>
+
+  <!-- Galería -->
+  <input type="file" id="galleryInput" accept="image/*" multiple>
+
+  <button onclick="abrirCamara()">Captura el momento</button>
+  <button onclick="abrirGaleria()">Sube tu recuerdo</button>
+  <button onclick="subirFotos()">Guarda tu recuerdo</button>
+  <button onclick="mostrarAlbum()">Ver álbum</button>
+
+  <p id="mensaje"></p>
+
+  <div id="album"></div>
+</div>
+
+<script>
+  const MAX_FOTOS = 10;
+
+  // 🔧 CONFIGURA TUS DATOS DE CLOUDINARY
+  const CLOUD_NAME = "TU_CLOUD_NAME";
+  const UPLOAD_PRESET = "TU_UPLOAD_PRESET";
+
+  let fotosSeleccionadas = [];
+
+  function abrirCamara() {
+    document.getElementById("cameraInput").click();
+  }
+
+  function abrirGaleria() {
+    document.getElementById("galleryInput").click();
+  }
+
+  document.getElementById("cameraInput").addEventListener("change", manejarFotos);
+  document.getElementById("galleryInput").addEventListener("change", manejarFotos);
+
+  function manejarFotos(e) {
+    fotosSeleccionadas = Array.from(e.target.files);
+    document.getElementById("mensaje").innerText =
+      fotosSeleccionadas.length + " foto(s) seleccionada(s)";
+  }
+
+  async function subirFotos() {
+    if (fotosSeleccionadas.length === 0) {
+      document.getElementById("mensaje").innerText = "No seleccionaste fotos";
+      return;
+    }
+
+    if (fotosSeleccionadas.length > MAX_FOTOS) {
+      document.getElementById("mensaje").innerText =
+        "Máximo " + MAX_FOTOS + " fotos permitidas";
+      return;
+    }
+
+    document.getElementById("mensaje").innerText = "Subiendo fotos...";
+
+    for (let foto of fotosSeleccionadas) {
+      const formData = new FormData();
+      formData.append("file", foto);
+      formData.append("upload_preset", UPLOAD_PRESET);
+
+      await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`, {
+        method: "POST",
+        body: formData
+      });
+    }
+
+    document.getElementById("mensaje").innerText =
+      "✨ Tu recuerdo fue guardado ✨";
+
+    fotosSeleccionadas = [];
+  }
+
+  async function mostrarAlbum() {
+    const album = document.getElementById("album");
+    album.style.display = "block";
+    album.innerHTML = "Cargando álbum...";
+
+    const res = await fetch(
+      `https://res.cloudinary.com/${CLOUD_NAME}/image/list/boda.json`
+    );
+
+    const data = await res.json();
+    album.innerHTML = "";
+
+    data.resources.reverse().forEach(img => {
+      const image = document.createElement("img");
+      image.src = `https://res.cloudinary.com/${CLOUD_NAME}/image/upload/${img.public_id}.jpg`;
+      album.appendChild(image);
+    });
+  }
+
+  // Actualización automática del álbum cada 15 segundos
+  setInterval(() => {
+    if (document.getElementById("album").style.display === "block") {
+      mostrarAlbum();
+    }
+  }, 15000);
+</script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ricordi Eterni</title>
+
+  <style>
+    body {
+      font-family: "Times New Roman", Times, serif;
       background: #0A1F44;
       margin: 0;
       padding: 20px;
