Update MAX_FOTOS and UPLOAD_PRESET values

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 </div>
 
 <script>
-  const MAX_FOTOS = 10;
+  const MAX_FOTOS =50;
 
   // 🔧 CONFIGURA TUS DATOS DE CLOUDINARY
   const CLOUD_NAME = "TU_CLOUD_NAME";
-  const UPLOAD_PRESET = "TU_UPLOAD_PRESET";
+  const UPLOAD_PRESET = "boda_preset";
 
   let fotosSeleccionadas = [];
 
